--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,12 +16,18 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: "1.25"
+          cache: true
+
+      - name: Download dependencies
+        run: |
+          go mod download
+          go mod verify
 
       - name: Go mod tidy check
         run: |
           go mod tidy
-          git diff --exit-code
+          git diff --exit-code -- go.mod go.sum
 
       - name: Run tests
         run: go test ./... -race -count=1
@@ -29,5 +35,6 @@ jobs:
       - name: Golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.61.0
-          args: --timeout=3m
+          version: v1.64.0
+          args: --timeout=5m
+          install-mode: binary
